--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.2
 Flask-Cors==3.0.10
+Flask-Login==0.5.0
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
